--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,10 @@
 name: Deploy to Dokku - production
 
-on: [push]
+on: [push, workflow_dispatch]
 
 env:
   DOKKU_HOST: 'paas.hivenet.xyz'
   DOKKU_APP_NAME: 'simple-servicetag-generator'
-  DOKKU_REMOTE_BRANCH: 'master'
 
 jobs:
   deploy:
@@ -21,4 +20,3 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           dokku-host: ${{ env.DOKKU_HOST }}
           app-name: ${{ env.DOKKU_APP_NAME }}
-          app-remote-branch: ${{ env.DOKKU_REMOTE_BRANCH }}
